# DTVM

./: BUILD.bazel1.2.1  CMakeLists.txt
.ci/: run_test_suite.sh
.github/workflows/: dtvm_evm_test_x86.yml  dtvm_wasm_test_x86.yml
src/: CMakeLists.txt  zetaengine-c.cpp
src/action/: CMakeLists.txt  compiler.cpp  compiler.h  evm_bytecode_visitor.h
src/cli/: CMakeLists.txt  dtvm.cpp
src/common/: CMakeLists.txt  evm_traphandler.cpp  evm_traphandler.h
src/compiler/: CMakeLists.txt  evm_compiler.cpp
src/entrypoint/: entrypoint.cpp  entrypoint.h
src/evm/: evm.h  interpreter.cpp  interpreter.h  opcode_handlers.cpp  opcode_handlers.h
src/host/: CMakeLists.txt
src/runtime/: CMakeLists.txt  config.h  destroyer.cpp  destroyer.h  evm_instance.cpp  evm_instance.h  evm_module.cpp  isolation.cpp  isolation.h  runtime.cpp  runtime.h
src/tests/: CMakeLists.txt  evm_interp_tests.cpp  evm_state_tests.cpp  evm_test_fixtures.cpp  evm_test_fixtures.h  evm_test_helpers.cpp  evm_test_helpers.h  evm_test_host.hpp  solidity_contract_tests.cpp  solidity_jit_tests.cpp
src/utils/: others.cpp
tests/evm_asm/: add_overflow_0.easm  add_overflow_0.expected  add_overflow_1.easm  add_overflow_1.expected  add_overflow_2.easm  add_overflow_2.expected  add_overflow_3.easm  add_overflow_3.expected  add_simple.easm  add_simple.expected  add_simple.ir  add_stack_underflow.easm  add_stack_underflow.expected  adjacent_jumpdests.easm  and_allones.easm  and_allones.expected  and_zero.easm  and_zero.expected  (+76 more)
tools/: easm2bytecode.py  format.sh  run_evm_tests.py  solc_batch_compile.sh
(+28 files in other folders)
